Update ComponentsController